Navbar changes that fix the mid-range issue where it was either wrapping over overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -708,19 +708,19 @@ Parallax
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #28c3ab;
-    outline: 0;
-    color: #000;
-    background-color: #28c3ab;
+  border: 1px solid #28c3ab;
+  outline: 0;
+  color: #000;
+  background-color: #28c3ab;
 }
 
 .btn-huge {
-    padding: 25px;
-    font-size: 26px;
+  padding: 25px;
+  font-size: 26px;
 }
 
 .banner-social-buttons {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 
@@ -728,38 +728,38 @@ Parallax
 
 @media(min-width:767px) {
 
-    .navbar {
-        padding: 20px 0;
-        border-bottom: 0;
-        letter-spacing: 1px;
-        background: 0 0;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-    }
+  .navbar {
+    padding: 20px 0;
+    border-bottom: 0;
+    letter-spacing: 1px;
+    background: 0 0;
+    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
+  }
 
-    .top-nav-collapse {
-        padding: 0;
-        background-color: #000;
-    }
+  .top-nav-collapse {
+    padding: 0;
+    background-color: #000;
+  }
 
-    .navbar-custom.top-nav-collapse {
-        border-bottom: 1px solid rgba(255,255,255,.3);
-    }
-	
-    .intro {
-        height: 100%;
-        padding: 0;
-    }
+  .navbar-custom.top-nav-collapse {
+    border-bottom: 1px solid rgba(255,255,255,.3);
+  }
 
-    .brand-heading {
-        font-size: 100px;
-    }
-	
+  .intro {
+    height: 100%;
+    padding: 0;
+  }
 
-    .intro-text {
-        font-size: 25px;
-    }
+  .brand-heading {
+    font-size: 100px;
+  }
+
+
+  .intro-text {
+    font-size: 25px;
+  }
 
 
 }
@@ -800,6 +800,26 @@ Parallax
 		font-size: 20px;
 	}
 	
+}
+
+/* Overrides for navbar due to font */
+@media (min-width: 768px) {
+  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+    margin-left: -45px;
+  }
+}
+
+.nav>li>a {
+  position: relative;
+  display: block;
+  padding: .3em;
+}
+
+@media (min-width: 768px) {
+  .container>.navbar-collapse {
+    margin-right: 35px;
+    margin-left: 0;
+  }
 }
 
 /* Admin edits */
@@ -871,6 +891,3 @@ span, textarea, input {
 .blue-bar {
   border-top: 2px solid #7AB8F1;
 }
-
-/* Address */
-
